--- a/exam_generation.ipynb
+++ b/exam_generation.ipynb
@@ -4,8 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instruction:\n",
-    "<Place holder>"
+    "## Hướng Dẫn\n",
+    "Để thay đổi tên trường, tên tỉnh thành cho bộ đề, thầy cô có thể thay đổi một số các biến sau đây\n",
+    "Có thể thay `province` bằng tên tỉnh/thành\n",
+    "Có thể thay `school` bằng tên trường"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "province = \"SỞ GD&ĐT HÀ GIANG\"\n",
+    "school = \"STEAM FOR VIETNAM\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Phần 1: Chuyển Ma Trận Sang File PDF"
    ]
   },
   {
@@ -435,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tạo đề thi"
+    "## Phần 2: Tạo đề thi"
    ]
   },
   {
@@ -486,15 +505,8 @@
     "        elif value.get(\"Thông tin Nội bộ (học sinh không thấy)\").get(\"Loại câu hỏi\") == \"Tự luận\":\n",
     "            list_of_tl += question\n",
     "\n",
-    "    return list_of_questions, list_of_tl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return list_of_questions, list_of_tl\n",
+    "\n",
     "def merge_all_sections(list_of_questions, list_of_tl):\n",
     "    TEST_TMPL = \"\"\"\n",
     "    <!DOCTYPE html>\n",
@@ -661,20 +673,12 @@
     "            </footer>\n",
     "        </div>\n",
     "    </html>\"\"\"\n",
-    "    return TEST_TMPL+title+part_1+part_2+footer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return TEST_TMPL+title+part_1+part_2+footer\n",
+    "\n",
     "def exam_generation(question_sets):\n",
     "    list_of_questions, list_of_tl = compile_questions(question_sets)\n",
     "    html_content = merge_all_sections(list_of_questions, list_of_tl)\n",
-    "    return html_content\n",
-    "    "
+    "    return html_content"
    ]
   },
   {
@@ -689,129 +693,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "province = \"SỞ GD&ĐT HÀ GIANG\"\n",
-    "school = \"STEAM FOR VIETNAM\"\n",
-    "# question_sets = {\n",
-    "#     \"BÀI 1\": {\n",
-    "#         \"Câu hỏi\": \"Cho bất đẳng thức \\(a \\leq b\\). Phát biểu nào sau đây đúng?\\n\\nA. \\(a\\) luôn nhỏ hơn \\(b\\)\\nB. \\(a\\) có thể bằng \\(b\\)\\nC. \\(a\\) luôn lớn hơn \\(b\\)\\nD. \\(a\\) có thể lớn hơn hoặc bằng \\(b\\)\\n\",\n",
-    "#         \"Số điểm\": 4,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Bất đẳng thức; Bất phương trình bậc nhất một ẩn\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Bất Đẳng Thức\",\n",
-    "#             \"Mức độ Nhận thức\": \"Nhận biết\",\n",
-    "#             \"Loại câu hỏi\": \"Trắc nghiệm\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 2\": {\n",
-    "#         \"Câu hỏi\": \"Nếu \\(a \\leq b\\) và \\(b \\leq c\\), phát biểu nào sau đây là đúng?\\n\\nA. \\(a \\geq c\\)\\nB. \\(a = c\\)\\nC. \\(a \\leq c\\)\\nD. \\(a\\) và \\(c\\) không liên quan đến nhau\\n\",\n",
-    "#         \"Số điểm\": 8,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Bất đẳng thức; Bất phương trình bậc nhất một ẩn\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Bất Đẳng Thức\",\n",
-    "#             \"Mức độ Nhận thức\": \"Thông hiểu\",\n",
-    "#             \"Loại câu hỏi\": \"Trắc nghiệm\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 3\": {\n",
-    "#         \"Câu hỏi\": \"Phương trình nào sau đây có nghiệm \\(x = 2\\)?\\n\\nA. \\(x + 2 = 0\\)\\nB. \\(2x - 4 = 0\\)\\nC. \\(x^2 - 4 = 0\\)\\nD. \\(3x + 1 = 7\\)\\n\",\n",
-    "#         \"Số điểm\": 4,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Phương trình và Hệ Phương trình\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Phương Trình Bậc Nhất\",\n",
-    "#             \"Mức độ Nhận thức\": \"Nhận biết\",\n",
-    "#             \"Loại câu hỏi\": \"Trắc nghiệm\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 4\": {\n",
-    "#         \"Câu hỏi\": \"Cho phương trình \\(2x - 5 = 3\\). Giá trị nào của \\(x\\) thỏa mãn phương trình?\\n\\nA. \\(x = 1\\)\\nB. \\(x = 4\\)\\nC. \\(x = 3\\)\\nD. \\(x = -1\\)\\n\",\n",
-    "#         \"Số điểm\": 8,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Phương trình và Hệ Phương trình\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Phương Trình Bậc Nhất\",\n",
-    "#             \"Mức độ Nhận thức\": \"Thông hiểu\",\n",
-    "#             \"Loại câu hỏi\": \"Trắc nghiệm\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 5\": {\n",
-    "#         \"Câu hỏi\": \"Số nào dưới đây là căn bậc hai của 81?\\n\\nA. 7\\nB. 8\\nC. 9\\nD. 10\\n\",\n",
-    "#         \"Số điểm\": 4,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Căn thức\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Căn Bậc Hai\",\n",
-    "#             \"Mức độ Nhận Thức\": \"Nhận biết\",\n",
-    "#             \"Loại câu hỏi\": \"Trắc nghiệm\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 6\": {\n",
-    "#         \"Câu hỏi\": \"Rút gọn biểu thức \\(\\sqrt{72}\\).\\n\\nA. \\(6\\sqrt{2}\\)\\nB. \\(4\\sqrt{3}\\)\\nC. \\(3\\sqrt{6}\\)\\nD. \\(2\\sqrt{18}\\)\\n\",\n",
-    "#         \"Số điểm\": 8,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Căn thức\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Căn Bậc Hai\",\n",
-    "#             \"Mức độ Nhận Thức\": \"Thông hiểu\",\n",
-    "#             \"Loại câu hỏi\": \"Trắc nghiệm\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 7\": {\n",
-    "#         \"Câu hỏi\": \"Biểu thức nào dưới đây là căn bậc ba của 27?\\n\\nA. 3\\nB. 9\\nC. 27\\nD. 81\\n\",\n",
-    "#         \"Số điểm\": 4,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Căn thức\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Căn Bậc Ba\",\n",
-    "#             \"Mức độ Nhận Thức\": \"Nhận biết\",\n",
-    "#             \"Loại câu hỏi\": \"Trắc nghiệm\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 8\": {\n",
-    "#         \"Câu hỏi\": \"Rút gọn biểu thức căn bậc ba \\(\\sqrt[3]{64}\\).\\n\\nA. 4\\nB. 8\\nC. 16\\nD. 32\\n\",\n",
-    "#         \"Số điểm\": 8,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Căn thức\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Căn Bậc Ba\",\n",
-    "#             \"Mức độ Nhận Thức\": \"Thông hiểu\",\n",
-    "#             \"Loại câu hỏi\": \"Trắc nghiệm\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 9\": {\n",
-    "#         \"Câu hỏi\": \"Giải hệ phương trình sau:\\n\\n\\(\\begin{cases} 2x + y = 5 \\\\ 3x - y = 4 \\end{cases}\\)\\n\",\n",
-    "#         \"{Số điểm}\": 8,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Phương trình và Hệ Phương trình\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"Hệ Hai PT Bậc Nhất\",\n",
-    "#             \"Mức độ Nhận Thức\": \"Vận dụng\",\n",
-    "#             \"Loại câu hỏi\": \"Tự luận\"\n",
-    "#         }\n",
-    "#     },\n",
-    "#     \"BÀI 10\": {\n",
-    "#         \"Câu hỏi\": \"Giải bất phương trình và biểu diễn tập nghiệm trên trục số:\\n\\n\\(2x - 3 > 1\\)\\n\",\n",
-    "#         \"Số điểm\": 8,\n",
-    "#         \"Thông tin Nội bộ (học sinh không thấy)\": {\n",
-    "#             \"Chương hoặc Chủ đề\": \"Bất đẳng thức; Bất phương trình bậc nhất một ẩn\",\n",
-    "#             \"Nội dung hoặc Đơn vị Kiến Thức\": \"BPT Bậc Nhất Một Ẩn\",\n",
-    "#             \"Mức độ Nhận Thức\": \"Vận dụng\",\n",
-    "#             \"Loại câu hỏi\": \"Tự luận\"\n",
-    "#         }\n",
-    "#     }\n",
-    "# }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# html = exam_generation(question_sets)\n",
-    "# with open(exam_html_file, \"w\", encoding=\"utf-8\") as exam:\n",
-    "#     exam.write(html)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
@@ -822,13 +703,6 @@
     "    with open(exam_html_file, \"w\", encoding=\"utf-8\") as exam:\n",
     "        exam.write(html)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
