feat: add instruction

--- a/exam_generation.ipynb
+++ b/exam_generation.ipynb
@@ -4,10 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hướng Dẫn\n",
-    "Để thay đổi tên trường, tên tỉnh thành cho bộ đề, thầy cô có thể thay đổi một số các biến sau đây\n",
-    "Có thể thay `province` bằng tên tỉnh/thành\n",
-    "Có thể thay `school` bằng tên trường"
+    "## Hướng Dẫn  \n",
+    "\n",
+    "Các thầy cô hãy Chạy (RUN) Ô SỐ 1, Ô SỐ 2 T\n",
+    "Ngay dứoi đây (Ô SỐ 1) là phần tuỳ chỉnh. Thầy cô điền vào các biến số ở bên dưới để thay đổi tên trường, tên tỉnh thành cho bộ đề, v..v..  \n",
+    "- Có thể thay `province` bằng tên tỉnh/thành\n",
+    "- Có thể thay `school` bằng tên trường\n",
+    "\n",
+    "Sau đó, hãy chạy Ô SỐ 1, Ô SỐ 2 bằng cách nhấn chọn (chuột trái vào Ô SỐ 1 và Ô SỐ 2), và nhấn tổ hợp phím Shift và Enter cùng 1 lúc"
    ]
   },
   {
@@ -16,8 +20,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ô SỐ 1\n",
     "province = \"SỞ GD&ĐT HÀ GIANG\"\n",
-    "school = \"STEAM FOR VIETNAM\""
+    "school = \"STEAM FOR VIETNAM\"\n",
+    "\n",
+    "## Tuỳ chỉnh đường dẫn đến dữ liệu MA TRẬN thầy cô đã tạo được với ChatGPT\n",
+    "matrix_json_file = './matrix.json'\n",
+    "\n",
+    "## Tuỳ chỉnh đường dẫn đến dữ liệu ĐỀ THI thầy cô đã tạo được với ChatGPT\n",
+    "exam_json_file = './exam.json'\n",
+    "\n",
+    "## Các file HTML sẽ được tạo ra ở đường dẫn bên dưới\n",
+    "matrix_html_file = './matrix.html'\n",
+    "exam_html_file = './exam.html'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ô SỐ 2\n",
+    "%%capture\n",
+    "!npx degit STEAMforVietnam/Gen-AI-for-Teachers/exam.json exam.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sau khi chạy cell trên, thầy cô sẽ có một file mẫu gọi là `exam.json`. Thầy cô có thể dùng file này để tạo Đề thi. Cấu trúc JSON được tạo ra bởi ChatGPT có thể được copy và paste vào file này"
    ]
   },
   {
@@ -39,15 +72,8 @@
     "            existing_data[key].update(new_data[key])\n",
     "        else:\n",
     "            existing_data[key] = new_data[key]\n",
-    "    return existing_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return existing_data\n",
+    "\n",
     "def prepare_matrix_data(json_object):\n",
     "    lo_data = {\n",
     "        'knowing': {\n",
@@ -127,15 +153,8 @@
     "            else:\n",
     "                matrix_data[chapter][learning_objective] = merge_learning_objects(matrix_data[chapter][learning_objective], lo_question)\n",
     "\n",
-    "    return matrix_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return matrix_data\n",
+    "\n",
     "def percentage_calculation(matrix_data):\n",
     "    total = {\n",
     "            'knowing': {\n",
@@ -187,15 +206,8 @@
     "                    total[kl][question]['total_questions'] += matrix_data[chapter][learning_objective][kl][question]['num_questions']\n",
     "                    total[kl][question]['total_score'] += matrix_data[chapter][learning_objective][kl][question]['score']\n",
     "\n",
-    "    return total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return total\n",
+    "\n",
     "def generating_exam_matrix(matrix_json_obj):\n",
     "    html_content = \"\"\"\n",
     "    <!DOCTYPE html>\n",
@@ -419,24 +431,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hướng dẫn:\n",
-    "Chọn đường dẫn tới file matrix_json_file chứa dữ liệu về ma trận đề bài và file matrix_html_file là ma trận đã được tạo ra ở định dạng HTML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_json_file = './matrix.json'\n",
-    "matrix_html_file = './matrix.html'\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -479,7 +473,7 @@
     "    list_of_tl = \"\"\n",
     "\n",
     "    for key, value in question_sets.items():\n",
-    "        question_items = value.get('Câu hỏi').replace(' \\\\ ', ' \\\\\\ ').split('\\n')\n",
+    "        question_items = value.get('câu_hỏi').replace(' \\\\ ', ' \\\\\\ ').split('\\n')\n",
     "        answer = \"\"\n",
     "        for ans in question_items[1:]:\n",
     "            if ans:\n",
@@ -488,8 +482,8 @@
     "            question = fr\"\"\"<!-- A question: -->\n",
     "                <article class=\"QuestionItem marginBottom2\">\n",
     "                <h3>\n",
-    "                    <strong><u>Câu {key.replace('BÀI ', '')}</u></strong>\n",
-    "                    <span>({value.get('Số điểm')} điểm)</span>\n",
+    "                    <strong><u>Câu {key.replace('bài ', '')}</u></strong>\n",
+    "                    <span>({value.get('số_điểm')} điểm)</span>\n",
     "                    <span>{question_items[0]}</span>\n",
     "\n",
     "                </h3>\n",
@@ -500,9 +494,9 @@
     "                <!-- /A question -->\n",
     "                \"\"\".replace('\\x08', '\\\\b')\n",
     "\n",
-    "        if value.get(\"Thông tin Nội bộ (học sinh không thấy)\").get(\"Loại câu hỏi\") == \"Trắc nghiệm\":\n",
+    "        if value.get(\"thông_tin_nội_bộ_(học_sinh_không_thấy)\").get(\"Loại câu hỏi\") == \"Trắc nghiệm\":\n",
     "            list_of_questions += question\n",
-    "        elif value.get(\"Thông tin Nội bộ (học sinh không thấy)\").get(\"Loại câu hỏi\") == \"Tự luận\":\n",
+    "        elif value.get(\"thông_tin_nội_bộ_(học_sinh_không_thấy)\").get(\"Loại câu hỏi\") == \"Tự luận\":\n",
     "            list_of_tl += question\n",
     "\n",
     "    return list_of_questions, list_of_tl\n",
@@ -683,23 +677,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exam_json_file = './exam.json'\n",
-    "exam_html_file = './exam.html'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "with open(exam_json_file, 'r', encoding='utf-8') as file:\n",
     "    question_sets = json.load(file)\n",
-    "    html = exam_generation(question_sets)\n",
+    "    question_sets_cleaned = {lesson.lower(): {k.lower().replace(\" \", \"_\"): v for k, v in detail.items()}\n",
+    "                             for lesson, detail in question_sets.items()}\n",
+    "    html = exam_generation(question_sets_cleaned)\n",
     "    with open(exam_html_file, \"w\", encoding=\"utf-8\") as exam:\n",
     "        exam.write(html)"
    ]
@@ -721,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
