--- a/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
+++ b/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "# Ô SỐ 2\n",
     "%%capture\n",
-    "!npx degit STEAMforVietnam/Gen-AI-for-Teachers/exam.json exam.json"
+    "!npx degit STEAMforVietnam/Gen-AI-for-Teachers/Tạo-Đề-bài-và-Đáp-án/exam.json exam.json"
    ]
   },
   {
