--- a/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
+++ b/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "## Phần 1: Hướng Dẫn  \n",
     "\n",
-    "Các thầy cô hãy Chạy (RUN) Ô SỐ 1, Ô SỐ 2 T\n",
-    "Ngay dứoi đây (Ô SỐ 1) là phần tuỳ chỉnh. Thầy cô điền vào các biến số ở bên dưới để thay đổi tên trường, tên tỉnh thành cho bộ đề, v..v..  \n",
+    "Các thầy cô hãy Chạy (RUN) Ô SỐ 1, Ô SỐ 2 ngay dứoi đây.  \n",
+    "(Ô SỐ 1) là phần tuỳ chỉnh. Thầy cô điền vào các biến số ở bên dưới để thay đổi tên trường, tên tỉnh thành cho bộ đề, v..v..  \n",
     "- Có thể thay `province` bằng tên tỉnh/thành\n",
     "- Có thể thay `school` bằng tên trường\n",
     "\n",
