feat: add variables

--- a/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
+++ b/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
@@ -10,6 +10,10 @@
     "(Ô SỐ 1) là phần tuỳ chỉnh. Thầy cô điền vào các biến số ở bên dưới để thay đổi tên trường, tên tỉnh thành cho bộ đề, v..v..  \n",
     "- Có thể thay `province` bằng tên tỉnh/thành\n",
     "- Có thể thay `school` bằng tên trường\n",
+    "- Có thể thay `exam_name` bằng tên của bài thi (ví dụ Đề kiểm tra 15 phút)\n",
+    "- Có thể thay `subject` bằng tên bộ môn\n",
+    "- Có thể thay `class_year` bằng Lớp (chữ hoặc số). Ví dụ, 9 hoặc Chín\n",
+    "- Có thể thay `total_time` bằng tổng số thời gian làm bài theo đơn vị phút. Ví dụ, 90 hoặc Chín mươi\n",
     "\n",
     "Sau đó, hãy chạy Ô SỐ 1, Ô SỐ 2 bằng cách nhấn chọn (chuột trái vào Ô SỐ 1 và Ô SỐ 2), và nhấn tổ hợp phím Shift và Enter cùng 1 lúc"
    ]
@@ -23,6 +27,12 @@
     "# Ô SỐ 1\n",
     "province = \"SỞ GD&ĐT HÀ GIANG\"\n",
     "school = \"STEAM FOR VIETNAM\"\n",
+    "exam_name = \"ĐỀ KIỂM TRA GIỮA KÌ HỌC KÌ II\"\n",
+    "subject = \"Toán\"\n",
+    "year = \"2023 - 2024\"\n",
+    "class_year = \"9\"\n",
+    "total_time = \"90\"\n",
+    "\n",
     "\n",
     "## Tuỳ chỉnh đường dẫn đến dữ liệu MA TRẬN thầy cô đã tạo được với ChatGPT\n",
     "matrix_json_file = './matrix.json'\n",
@@ -241,12 +251,12 @@
     "                            <div><em>(Đề gồm 01 trang)</em></div>\n",
     "                        </td>\n",
     "                        <td>\n",
-    "                            <h1>ĐỀ KIỂM TRA GIỮA KÌ HỌC KÌ II</h1>\n",
+    "                            <h1>{exam_name}</h1>\n",
     "                            <div>\n",
-    "                                <strong>Năm học: 2023 - 2024</strong><br>\n",
-    "                                <strong>Môn: Toán</strong><br>\n",
-    "                                <strong>Lớp: 9</strong><br>\n",
-    "                                <strong>Thời gian: 90 phút</strong>&nbsp;<em>(Không kể thời gian giao đề)</em>\n",
+    "                                <strong>Năm học: {year}</strong><br>\n",
+    "                                <strong>Môn: {subject}</strong><br>\n",
+    "                                <strong>Lớp: {class_year}</strong><br>\n",
+    "                                <strong>Thời gian: {total_time} phút</strong>&nbsp;<em>(Không kể thời gian giao đề)</em>\n",
     "                            </div>\n",
     "                        </td>\n",
     "                    </tr>\n",
