minor edit to matrix-generation notebook

--- a/Tạo-Ma-trận-Đề-bài/matrix-generation.ipynb
+++ b/Tạo-Ma-trận-Đề-bài/matrix-generation.ipynb
@@ -323,14 +323,14 @@
     "            <!-- <td rowspan=\"4\">1</td>\n",
     "            <td rowspan=\"4\">Căn bậc hai, căn bậc ba</td>\n",
     "            <td rowspan=\"2\">Căn bậc hai</td> -->\n",
-    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['knowing']['multiple_choice']['total_score']}</td>\n",
-    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['knowing']['free_form']['total_score']}</td>\n",
-    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['understanding']['multiple_choice']['total_score']}</td>\n",
-    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['understanding']['free_form']['total_score']}</td>\n",
-    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['application']['multiple_choice']['total_score']}</td>\n",
-    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['application']['free_form']['total_score']}</td>\n",
-    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['adv_application']['multiple_choice']['total_score']}</td>\n",
-    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['adv_application']['free_form']['total_score']}</td>\n",
+    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['knowing']['multiple_choice']['total_score']}đ</td>\n",
+    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['knowing']['free_form']['total_score']}đ</td>\n",
+    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['understanding']['multiple_choice']['total_score']}đ</td>\n",
+    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['understanding']['free_form']['total_score']}đ</td>\n",
+    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['application']['multiple_choice']['total_score']}đ</td>\n",
+    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['application']['free_form']['total_score']}đ</td>\n",
+    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['adv_application']['multiple_choice']['total_score']}đ</td>\n",
+    "            <td class=\"columnDataNumber\">{matrix_data[chapter][lo]['adv_application']['free_form']['total_score']}đ</td>\n",
     "            <td class=\"columnDataNumber\"></td>\n",
     "            <td class=\"columnDataNumber\"></td>\n",
     "            <td class=\"columnDataNumber\">{sum([matrix_data[chapter][lo][level]['multiple_choice']['total_score'] for level in ['knowing', 'understanding', 'application', 'adv_application']]) +  sum([matrix_data[chapter][lo][level]['free_form']['total_score'] for level in ['knowing', 'understanding', 'application', 'adv_application']])} </td>\n",
