--- a/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
+++ b/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
@@ -47,17 +47,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ô SỐ 2\n",
-    "%%capture\n",
-    "!npx degit STEAMforVietnam/Gen-AI-for-Teachers/Tạo-Đề-bài-và-Đáp-án/exam.json exam.json"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,30 +87,33 @@
     "    list_of_tl = \"\"\n",
     "\n",
     "    for key, value in question_sets.items():\n",
-    "        question_items = value.get('câu_hỏi').replace(' \\\\ ', ' \\\\\\ ').split('\\n')\n",
+    "        question_items = value.get('đề_bài').get('Nội dung').replace(' \\\\ ', ' \\\\\\ ').split('\\n')\n",
     "        answer_choices = \"\"\n",
     "        for ans in question_items[1:]:\n",
     "            if ans:\n",
     "                answer_choices += fr\"\"\"<li><div class=\"marginLeft2\">{ans}</div></li>\"\"\"\n",
     "\n",
     "\n",
-    "            question = fr\"\"\"<!-- A question: -->\n",
-    "                <article class=\"QuestionItem marginBottom2\">\n",
-    "                <h3>\n",
-    "                    <strong><u>Câu {key.replace('bài ', '')}</u></strong>\n",
-    "                    <span>({value.get('số_điểm')} điểm)</span>\n",
-    "                    <span>{question_items[0]}</span>\n",
+    "        question = fr\"\"\"<!-- A question: -->\n",
+    "            <article class=\"QuestionItem marginBottom2\">\n",
+    "            <h3>\n",
+    "                <strong><u>Câu {key.replace('câu ', '')}</u></strong>\n",
+    "                <span>({value.get('đề_bài').get('Số điểm')} điểm)</span>\n",
+    "                <span>{question_items[0]}</span>\n",
     "\n",
-    "                </h3>\n",
-    "                <ul class=\"QuestionItem-options columnNumbers4\">\n",
-    "                {answer_choices}\n",
-    "                </ul>\n",
-    "                </article>\n",
-    "                <!-- /A question -->\n",
-    "                \"\"\".replace('\\x08', '\\\\b')\n",
+    "            </h3>\n",
+    "            <ul class=\"QuestionItem-options columnNumbers4\">\n",
+    "            {answer_choices}\n",
+    "            </ul>\n",
+    "            </article>\n",
+    "            <!-- /A question -->\n",
+    "            \"\"\".replace('\\x08', '\\\\b')\n",
     "\n",
     "        if is_answer_key:\n",
-    "            answer_key = fr\"\"\"<strong>Đáp Án: {value.get('đáp_án')}</strong>\"\"\"\n",
+    "            if value.get(\"thông_tin_nội_bộ_(học_sinh_không_thấy)\").get(\"Loại câu hỏi\") == \"Trắc nghiệm\":\n",
+    "              answer_key = fr\"\"\"<strong>Đáp Án: {value.get('đáp_án').get('Kết quả')}</strong>\"\"\"\n",
+    "            else:\n",
+    "              answer_key = fr\"\"\"<strong>Đáp Án:</strong>\"\"\" + fr\"\"\"{value.get('đáp_án').get('Trình bày')}</strong>\"\"\"\n",
     "            question += answer_key\n",
     "\n",
     "        if value.get(\"thông_tin_nội_bộ_(học_sinh_không_thấy)\").get(\"Loại câu hỏi\") == \"Trắc nghiệm\":\n",
@@ -270,7 +262,6 @@
     "                <section class=\"marginBottom3\">\n",
     "                    <h2>\n",
     "                        <strong><u>I. Trắc nghiệm:</u></strong>\n",
-    "                        <em class=\"marginLeft1\">(4,0 điểm).</em>\n",
     "                        <strong class=\"marginLeft1\"><em>Chọn câu trả lời đúng nhất trong các câu sau:</em></strong>\n",
     "                    </h2>\n",
     "\n",
@@ -282,7 +273,6 @@
     "                <section class=\"marginBottom3\">\n",
     "                    <h2>\n",
     "                        <strong><u>II. Tự luận:</u></strong>\n",
-    "                        <em class=\"marginLeft1\">(6,0 điểm).</em>\n",
     "                    </h2>\n",
     "\n",
     "                    {list_of_tl}\n",
@@ -328,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -342,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
