--- a/Tạo-Ma-trận-Đề-bài/matrix-generation.ipynb
+++ b/Tạo-Ma-trận-Đề-bài/matrix-generation.ipynb
@@ -100,7 +100,7 @@
     "        lo_question = deepcopy(lo_data)\n",
     "\n",
     "        lo_question[knowledge_levels[mastery_level]][question_types[question_type]]['num_questions'] = int(question_num)\n",
-    "        lo_question[knowledge_levels[mastery_level]][question_types[question_type]]['total_score'] = int(total_score)\n",
+    "        lo_question[knowledge_levels[mastery_level]][question_types[question_type]]['total_score'] = total_score\n",
     "\n",
     "        if chapter not in matrix_data.keys():\n",
     "            matrix_data[chapter] = {learning_objective: lo_question}\n",
