minor edit in matrix-generation notebook

--- a/Tạo-Ma-trận-Đề-bài/matrix-generation.ipynb
+++ b/Tạo-Ma-trận-Đề-bài/matrix-generation.ipynb
@@ -268,7 +268,7 @@
     "            <!--<th></th> -->\n",
     "            <th colspan=\"2\">Thông hiểu</th>\n",
     "            <!--<th></th> -->\n",
-    "            <th colspan=\"2\">Vận dụng thấp</th>\n",
+    "            <th colspan=\"2\">Vận dụng</th>\n",
     "            <!--<th></th> -->\n",
     "            <th colspan=\"2\">Vận dụng cao</th>\n",
     "            <!--<th></th> -->\n",
