--- a/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
+++ b/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 36,
       "metadata": {
         "id": "fe2BFZdvqB20"
       },
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 37,
       "metadata": {
         "id": "LAHspS5UqB27"
       },
@@ -106,7 +106,7 @@
         "    list_of_tl = \"\"\n",
         "\n",
         "    for key, value in question_sets.items():\n",
-        "        question_items = value.get('đề_bài').get('Nội dung').replace(' \\\\ ', ' \\\\\\ ').split('\\n')\n",
+        "        question_items = value.get('đề_bài').get('Nội dung').split('\\n')\n",
         "        answer_choices = \"\"\n",
         "        for ans in question_items[1:]:\n",
         "            if ans:\n",
@@ -132,7 +132,8 @@
         "            if value.get(\"thông_tin_nội_bộ_(học_sinh_không_thấy)\").get(\"Loại câu hỏi\") == \"Trắc nghiệm\":\n",
         "              answer_key = fr\"\"\"<strong>Đáp Án: {value.get('đáp_án').get('Kết quả')}</strong>\"\"\"\n",
         "            else:\n",
-        "              answer_key = fr\"\"\"<strong>Đáp Án:</strong>\"\"\" + fr\"\"\"{value.get('đáp_án').get('Trình bày')}</strong>\"\"\"\n",
+        "              trinh_bay = value.get('đáp_án').get('Trình bày').replace(' \\\\\\n ', ' \\\\\\\\\\n ')\n",
+        "              answer_key = fr\"\"\"<strong>Đáp Án:</strong>\"\"\" + fr\"\"\"{trinh_bay}</strong>\"\"\"\n",
         "            question += answer_key\n",
         "\n",
         "        if value.get(\"thông_tin_nội_bộ_(học_sinh_không_thấy)\").get(\"Loại câu hỏi\") == \"Trắc nghiệm\":\n",
@@ -316,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 38,
       "metadata": {
         "id": "GGIZCwGMqB2_"
       },
