--- a/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
+++ b/Tạo-Đề-bài-và-Đáp-án/exam_generation.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 42,
       "metadata": {
         "id": "fe2BFZdvqB20"
       },
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 43,
       "metadata": {
         "id": "LAHspS5UqB27"
       },
@@ -106,7 +106,7 @@
         "    list_of_tl = \"\"\n",
         "\n",
         "    for key, value in question_sets.items():\n",
-        "        question_items = value.get('đề_bài').get('Nội dung').split('\\n')\n",
+        "        question_items = value.get('đề_bài').get('Nội dung').replace(\"- A.\", \"A.\").replace(\"- B.\", \"B.\").replace(\"- C.\", \"C.\").replace(\"- D.\", \"D.\").split('\\n')\n",
         "        answer_choices = \"\"\n",
         "        for ans in question_items[1:]:\n",
         "            if ans:\n",
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 44,
       "metadata": {
         "id": "GGIZCwGMqB2_"
       },
