update exam-generation notebook

--- a/Tạo-Đề-bài-và-Đáp-án/exam-generation.ipynb
+++ b/Tạo-Đề-bài-và-Đáp-án/exam-generation.ipynb
@@ -42,7 +42,7 @@
     "matrix_json_file = './matrix.json'\n",
     "\n",
     "## Tuỳ chỉnh đường dẫn đến dữ liệu ĐỀ THI thầy cô đã tạo được với ChatGPT\n",
-    "exam_json_file = './exam.json'\n",
+    "exam_json_file = './exam-in-progress.json'\n",
     "\n",
     "## Các file HTML sẽ được tạo ra ở đường dẫn bên dưới\n",
     "matrix_html_file = './matrix.html'\n",
