--- a/Tạo-Đề-bài-và-Đáp-án/exam-generation.ipynb
+++ b/Tạo-Đề-bài-và-Đáp-án/exam-generation.ipynb
@@ -132,7 +132,7 @@
     "            if value.get(\"thông_tin_nội_bộ_(học_sinh_không_thấy)\").get(\"Loại câu hỏi\") == \"Trắc nghiệm\":\n",
     "              answer_key = fr\"\"\"<strong>Đáp Án: {value.get('đáp_án').get('Kết quả')}</strong>\"\"\"\n",
     "            else:\n",
-    "              trinh_bay = value.get('đáp_án').get('Trình bày').replace("\\n", "\n").replace(' \\\n ', ' \\\\\n ').replace(' \\\\ ', ' \\\\\n ').replace(' \\\\\ ', ' \\\\\n ').replace(' \\\ ', ' \\\\\n ')\n",
+    "              trinh_bay = value.get('đáp_án').replace(\"\\\\n\", \"\\n\").replace(' \\\\\\n ', ' \\\\\\\\\\n ').replace(' \\\\\\\\ ', ' \\\\\\\\\\n ').replace(' \\\\\\\\\\ ', ' \\\\\\\\\\n ').replace(' \\\\\\ ', ' \\\\\\\\\\n ')\n",
     "              answer_key = fr\"\"\"<strong>Đáp Án:</strong>\"\"\" + fr\"\"\"{trinh_bay}</strong>\"\"\"\n",
     "            question += answer_key\n",
     "\n",
